# prog-avanzada

./: .justfile  justfile
Parcial 1/: CMakeLists.txt
Parcial 1/tarea100_prog/: ejercicio1.cpp
Parcial 1/tarea2_prog/: ejercicio10.cpp  ejercicio2.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp
Parcial 1/tarea3_prog/: ejercicio2.cpp  ejercicio6.cpp  ejercicio8.cpp
Parcial 1/tarea4_prog/: ejercicio2.cpp  ejercicio4.cpp  ejercicio5.cpp
Parcial 1/tarea5_prog/: ejercicio3.cpp
Parcial 1/tarea6_prog/: ejercicio2.cpp  ejercicio5.cpp
Parcial 1/tarea8_prog/: ejercicio2.cpp  ejercicio5.cpp
Parcial 1/tarea9_prog/: ejercicio3.cpp  ejercicio4.cpp
Parcial 2/: .justfile
Parcial 2/tarea1_prog/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp
Parcial 2/tarea2_prog/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp
Parcial 2/tarea3_prog/: ejercicio1.cpp
tarea2_prog/: .justfile  ejercicio1.cpp  ejercicio3.cpp  ejercicio8.cpp  ejercicio9.cpp
tarea3_prog/: dowhile_2.cpp  dowhile_3.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  for_1.cpp  for_7.cpp
tarea4_prog/: ejercicio3.cpp  switch2.cpp
tarea5_prog/: ejercicio1.cpp  ejercicio2.cpp  ejercicio4.cpp  ejercicio5.cpp
tarea6_prog/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp
tarea8_prog/: ejercicio1.cpp  ejercicio3.cpp  ejercicio4.cpp
tarea9_prog/: ejercicio1.cpp  ejercicio2.cpp  ejercicio5.cpp
