cmake_minimum_required(VERSION 3.21)
project(prog_avanzada)

set(CMAKE_CXX_STANDARD 14)

add_executable(prog_avanzada
        tarea100_prog/ejercicio1.cpp
        tarea2_prog/ejercicio1.cpp
        tarea2_prog/ejercicio10.cpp
        tarea2_prog/ejercicio2.cpp
        tarea2_prog/ejercicio3.cpp
        tarea2_prog/ejercicio4.cpp
        tarea2_prog/ejercicio5.cpp
        tarea2_prog/ejercicio6.cpp
        tarea2_prog/ejercicio7.cpp
        tarea2_prog/ejercicio8.cpp
        tarea2_prog/ejercicio9.cpp
        tarea3_prog/ejercicio1.cpp
        tarea3_prog/ejercicio10.cpp
        tarea3_prog/ejercicio2.cpp
        tarea3_prog/ejercicio3.cpp
        tarea3_prog/ejercicio4.cpp
        tarea3_prog/ejercicio5.cpp
        tarea3_prog/ejercicio6.cpp
        tarea3_prog/ejercicio7.cpp
        tarea3_prog/ejercicio8.cpp
        tarea3_prog/ejercicio9.cpp
        tarea4_prog/ejercicio1.cpp
        tarea4_prog/ejercicio2.cpp
        tarea4_prog/ejercicio3.cpp
        tarea4_prog/ejercicio4.cpp
        tarea4_prog/ejercicio5.cpp
        tarea5_prog/ejercicio1.cpp
        tarea5_prog/ejercicio2.cpp
        tarea5_prog/ejercicio3.cpp
        tarea5_prog/ejercicio4.cpp
        tarea5_prog/ejercicio5.cpp
        tarea6_prog/ejercicio1.cpp
        tarea6_prog/ejercicio2.cpp
        tarea6_prog/ejercicio3.cpp
        tarea6_prog/ejercicio4.cpp
        tarea6_prog/ejercicio5.cpp
        tarea8_prog/ejercicio1.cpp
        tarea8_prog/ejercicio2.cpp tarea8_prog/ejercicio3.cpp tarea8_prog/ejercicio4.cpp tarea8_prog/ejercicio5.cpp tarea9_prog/ejercicio1.cpp tarea9_prog/ejercicio2.cpp tarea9_prog/ejercicio3.cpp tarea9_prog/ejercicio4.cpp tarea9_prog/ejercicio5.cpp)
